Improve code style (#132)
* Improve code style
* Simplify opening URL by default browser
* Remove unnecessary casting
* Fix possible NullPointerException
* Improve equals implementation in PlaylistTreeNode
* Remove unused imports
* Improve comment
* Replace `getPlaylistEntries()` in lambda stream expression
* Implement Comparable and use that in equals